fix: adicionando overflow e altura máxima

--- a/frontend/src/app/features/client-panel/client-panel.component.scss
+++ b/frontend/src/app/features/client-panel/client-panel.component.scss
@@ -4,7 +4,12 @@
 
 :host {
   width: 100%;
+  overflow: auto;
+  max-height: 50%;
   max-width: 1400px;
+  border: 1px solid $neutral-30;
+  border-radius: 20px;
+  padding: 30px;
 }
 
 table {
